--- a/index.html
+++ b/index.html
@@ -36,5 +36,30 @@
             </ul>
         </div>
     </header>
+    <main>
+        <!-- section 1 -->
+        <section>
+            <div class="large-container">
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                <div class="container-section-1">
+                    <div class="col-left">
+                        <p>
+                            Finalmente tutti i tuoi strumenti, contenuti e collaboratori
+                            sono accessibili dallo stesso posto. Dropbox Business è più
+                            di uno spazio di archiviazioni sicuro: è un modo intelligente
+                            e integrato per ottimizzare il flusso di lavoro esistente.
+                        </p>
+                        <button class="btn-blue btn-large">Inizia la tua prova gratuita</button>
+                        <div>Annulla in qualsiasi momento</div>
+                        <div><i class="fa-solid fa-arrow-down"></i></div>
+                    </div>
+                    <div class="col-right">
+                        <img src="img/jumbo.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- /section 1 -->
+    </main>
 </body>
 </html>
