feat: add section 2

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- /Font Awesome -->
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="debug">
+<body class="">
     <header>
         <div class="nav-left col">
             <img src="img/logo-small.png" alt="">
@@ -59,7 +59,133 @@
                 </div>
             </div>
         </section>
+        <hr id="hr">
         <!-- /section 1 -->
+         <!-- section 2 -->
+         <section>
+            <div class="container">
+                <h1>Trova il piano business che fa per te</h1>
+                <div class="flex-check">
+                    <div><input type="radio" name="fatturazione"> Fatturazione mensile</div>
+                    <div><input type="radio" name="fatturazione"> Fatturazione annuale</div>
+                </div>
+                <div class="container-piano-business">
+                    <div class="header-col col">
+                        <div class="border"><i class="fa-solid fa-user"></i>Singolo</div>
+                        <div class="contentbox">
+                            <h2>Professional</h2>
+                            <br>
+                            <div><strong>€ 12.00</strong></div>
+                            <br>
+                            <span class="grey">/mese</span>
+                            <div class="container-lista">
+                                <ul>
+                                    <li><i class="fa-solid fa-user"></i>1 utente</li>
+                                    <li><i class="fa-solid fa-envelope"></i>5 TB di spazio di archiviazione sicuro</li>
+                                    <li><i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                                </ul>
+                            </div>
+                            <button class="btn-blue btn-large margin-70">Prova gratis per 30 giorni</button>
+                            <div class="padtop margin-40">oppure <a href="">acquista ora</a></div>
+                            <hr id="short-hr" class="margin-40">
+                            <div class="container-lista">
+                                <h4 class="margin-40">Punti Salienti del piano</h4>
+                                <ul>
+                                    <li><span class="blue-check"><i class="fa-solid fa-check"></i></span>Invia file fino a 100 GB con Dropbox Transfert</li>
+                                    <li><span class="blue-check"><i class="fa-solid fa-check"></i></span>Cartelle offline su dispositivi mobili</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="header-col col">
+                        <div class="border"><i class="fa-solid fa-people-group"></i>Team</div>
+                        <div class="contentbox">
+                            <h2>Professional</h2>
+                            <br>
+                            <div><strong>€ 12.00</strong></div>
+                            <br>
+                            <span class="grey">/mese</span>
+                            <div class="container-lista">
+                                <ul>
+                                    <li><i class="fa-solid fa-user"></i>1 utente</li>
+                                    <li><i class="fa-solid fa-envelope"></i>5 TB di spazio di archiviazione sicuro</li>
+                                    <li><i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                                </ul>
+                            </div>
+                            <button class="btn-blue btn-large margin-70">Prova gratis per 30 giorni</button>
+                            <div class="padtop margin-40">oppure <a href="">acquista ora</a></div>
+                            <hr id="short-hr" class="margin-40">
+                            <div class="container-lista">
+                                <h4 class="margin-40">Punti Salienti del piano</h4>
+                                <ul>
+                                    <li><span class="blue-check"><i class="fa-solid fa-check"></i></span>Nessun limite di spazio per i file</li>
+                                    <li><span class="blue-check"><i class="fa-solid fa-check"></i></span>Cartelle offline su dispositivi mobili</li>
+                                    <li><span class="blue-check"><i class="fa-solid fa-check"></i></span>Risparmio del 50% rispetto alle iscrizioni singole</li>
+                                    <li><span class="blue-check"><i class="fa-solid fa-check"></i></span>possibilità di inserire nuov mebri del team</li>
+                                    <li><span class="blue-check"><i class="fa-solid fa-check"></i></span>Gestione dei permessi in base ai ruoli</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="header-col col">
+                        <div class="border"><i class="fa-solid fa-building"></i>Azienda</div>
+                        <div class="contentbox">
+                            <h2>Professional</h2>
+                            <br>
+                            <div><strong>€ 12.00</strong></div>
+                            <br>
+                            <span class="grey">/mese</span>
+                            <div class="container-lista">
+                                <ul>
+                                    <li><i class="fa-solid fa-user"></i>1 utente</li>
+                                    <li><i class="fa-solid fa-envelope"></i>5 TB di spazio di archiviazione sicuro</li>
+                                    <li><i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                                </ul>
+                            </div>
+                            <button class="btn-blue btn-large margin-70">Prova gratis per 30 giorni</button>
+                            <div class="padtop margin-40">oppure <a href="">acquista ora</a></div>
+                            <hr id="short-hr" class="margin-40">
+                            <div class="container-lista">
+                                <h4 class="margin-40">Punti Salienti del piano</h4>
+                                <ul>
+                                    <li><span class="blue-check"><i class="fa-solid fa-check"></i></span>Invia file fino a 100 GB con Dropbox Transfert</li>
+                                    <li><span class="blue-check"><i class="fa-solid fa-check"></i></span>Servizio assistenza 24/h</li>
+                                    <li><span class="blue-check"><i class="fa-solid fa-check"></i></span>Possibilità di personalizzazione totale</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="bottom-box">
+                    <div class="border"><i class="fa-solid fa-building"></i>Team</div>
+                    <div class="contentbox">
+                        <div class="flex">
+                            <h2>Enterprise</h2>
+                            <button class="btn-blue btn-large p-bottom-content">Contatta l'ufficio vendite</button>
+                        </div>
+                        <br>
+                        <h4>Contatta l'ufficio vendite per i prezzi</h4>
+                        <p class="margin-40 p-bottom-content">Soluzioni personalizzate e supporto su misura per aiutare i professionsti IT nella gestione su <br>qualsiasi scala.</p>    
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="container-partner">
+                        <div class="partner-left">
+                            <img src="img/partner.png" alt="">
+                        </div>
+                        <div class="partner-right">
+                            <h2>Entra in contatto con un partner Dropbox</h2>
+                            <br>
+                            <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari pe raggiungere
+                                i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.
+                            </p>
+                            <button class="btn-large margin-30">Trova un partner</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+         </section>
+         <!-- /section 2 -->
     </main>
 </body>
 </html>
