feat: add section 3

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </section>
         <hr id="hr">
         <!-- /section 1 -->
-         <!-- section 2 -->
+        <!-- section 2 -->
          <section>
             <div class="container">
                 <h1>Trova il piano business che fa per te</h1>
@@ -185,7 +185,66 @@
                 </div>
             </div>
          </section>
-         <!-- /section 2 -->
+        <!-- /section 2 -->
+        <!-- section 3 -->
+        <div class="container">
+            <h1>Esegui più operazioni con Dropbox Business</h1>
+            <div class="row gap-30 products">
+                <div class="col">
+                    <img src="img/business-feature-switching-tools.png" alt="">
+                    <h1>Passa di meno da uno strumento all'altro</h1>
+                    <p class="margin-30">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica
+                        e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office
+                        e Dropbox Paper direttamente da Dropbox
+                    </p>
+                </div>
+                <div class="col">
+                    <img src="img/business-feature-send-files-it.png" alt="">
+                    <h1>Passa di meno da uno strumento all'altro</h1>
+                    <p class="margin-30">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica
+                        e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office
+                        e Dropbox Paper direttamente da Dropbox
+                    </p>
+                </div>
+                <div class="col"><img src="img/business-feature-coordinate-it.png" alt="">
+                    <h1>Passa di meno da uno strumento all'altro</h1>
+                    <p class="margin-30">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica
+                        e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office
+                        e Dropbox Paper direttamente da Dropbox
+                    </p></div>
+                </div>
+                <div class="row gap-30 products">
+                    <div class="col">
+                        <img src="img/business-feature-integrations-it.png" alt="">
+                        <h1>Passa di meno da uno strumento all'altro</h1>
+                        <p class="margin-30">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica
+                            e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office
+                            e Dropbox Paper direttamente da Dropbox
+                        </p>
+                    </div>
+                    <div class="col">
+                        <img src="img/business-feature-multi-device.png" alt="">
+                        <h1>Passa di meno da uno strumento all'altro</h1>
+                        <p class="margin-30">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica
+                            e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office
+                            e Dropbox Paper direttamente da Dropbox
+                        </p>
+                    </div>
+                    <div class="col"><img src="img/business-feature-security.png" alt="">
+                        <h1>Passa di meno da uno strumento all'altro</h1>
+                        <p class="margin-30">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica
+                            e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office
+                            e Dropbox Paper direttamente da Dropbox
+                        </p>
+                    </div>
+                </div>
+                <div class="margin-200">
+                    <h1>Più di 500.000 team utilizzano Dropbox Business</h1>
+                    <a href="">Scopri di più sui nostri clienti</a>
+                </div>  
+            </div>  
+        </div>
+        <!-- /section 3 -->
     </main>
 </body>
 </html>
