feat: add footer

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
         </section>
-        <hr id="hr">
+        <hr class="short-hr">
         <!-- /section 1 -->
         <!-- section 2 -->
          <section>
@@ -245,6 +245,56 @@
             </div>  
         </div>
         <!-- /section 3 -->
+        <!-- footer -->
+         <footer>
+            <div class="large-container">
+                <div class="row">
+                    <ul>
+                        <h1>Dropbox</h1>
+                        <li><a href="">Applicazione</a></li>
+                        <li><a href="">Perchè Dropbox</a></li>
+                        <li><a href="">Piani</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">funzioni</a></li>
+                    </ul>
+                    <ul>
+                        <h1>Dropbox</h1>
+                        <li><a href="">Applicazione</a></li>
+                        <li><a href="">Perchè Dropbox</a></li>
+                        <li><a href="">Piani</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">funzioni</a></li>
+                    </ul>
+                    <ul>
+                        <h1>Dropbox</h1>
+                        <li><a href="">Applicazione</a></li>
+                        <li><a href="">Perchè Dropbox</a></li>
+                        <li><a href="">Piani</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">funzioni</a></li>
+                    </ul>
+                    <ul>
+                        <h1>Dropbox</h1>
+                        <li><a href="">Applicazione</a></li>
+                        <li><a href="">Perchè Dropbox</a></li>
+                        <li><a href="">Piani</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">funzioni</a></li>
+                    </ul>
+                    <ul>
+                        <h1>Dropbox</h1>
+                        <li><a href="">Applicazione</a></li>
+                        <li><a href="">Perchè Dropbox</a></li>
+                        <li><a href="">Piani</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">funzioni</a></li>
+                    </ul>
+                </div>
+                <hr class="short-hr-footer">
+                <div class="footer-language"><i class="fa-solid fa-earth-americas"></i> Italiano<i class="fa-solid fa-sort-up"></i></div>
+            </div>
+         </footer>
+        <!-- /footer -->
     </main>
 </body>
 </html>
