--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Google Fonts: https://fonts.google.com/ -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <!-- /Google Fonts -->
     <!-- Font Awesome: https://fontawesome.com/search?o=r&m=free -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -258,7 +258,7 @@
                         <li><a href="">funzioni</a></li>
                     </ul>
                     <ul>
-                        <h1>Dropbox</h1>
+                        <h1>Prodotti</h1>
                         <li><a href="">Applicazione</a></li>
                         <li><a href="">Perchè Dropbox</a></li>
                         <li><a href="">Piani</a></li>
@@ -266,7 +266,7 @@
                         <li><a href="">funzioni</a></li>
                     </ul>
                     <ul>
-                        <h1>Dropbox</h1>
+                        <h1>Azienda</h1>
                         <li><a href="">Applicazione</a></li>
                         <li><a href="">Perchè Dropbox</a></li>
                         <li><a href="">Piani</a></li>
@@ -274,7 +274,7 @@
                         <li><a href="">funzioni</a></li>
                     </ul>
                     <ul>
-                        <h1>Dropbox</h1>
+                        <h1>Supporto</h1>
                         <li><a href="">Applicazione</a></li>
                         <li><a href="">Perchè Dropbox</a></li>
                         <li><a href="">Piani</a></li>
@@ -282,7 +282,7 @@
                         <li><a href="">funzioni</a></li>
                     </ul>
                     <ul>
-                        <h1>Dropbox</h1>
+                        <h1>Community</h1>
                         <li><a href="">Applicazione</a></li>
                         <li><a href="">Perchè Dropbox</a></li>
                         <li><a href="">Piani</a></li>
